# ALexnet_ROS_Cpp

./: CMakeLists.txt  README.md  package.xml
src/: main.cpp  myDataFile.txt
src/codegen/: DeepLearningNetwork.cu  DeepLearningNetwork.h  MWActivationFunctionType.hpp  MWCNNLayer.cpp  MWCNNLayer.hpp  MWCNNLayerImplBase.hpp  MWCudaDimUtility.hpp  MWCudnnCNNLayerImpl.cu  MWCudnnCNNLayerImpl.hpp  MWCudnnCustomLayerBase.cpp  MWCudnnCustomLayerBase.hpp  MWCudnnElementwiseAffineLayerImpl.cu  MWCudnnElementwiseAffineLayerImpl.hpp  MWCudnnFCLayerImpl.cu  MWCudnnFCLayerImpl.hpp  MWCudnnFusedConvActivationLayerImpl.cu  MWCudnnFusedConvActivationLayerImpl.hpp  MWCudnnInputLayerImpl.hpp  MWCudnnLayerImplFactory.cu  MWCudnnLayerImplFactory.hpp  MWCudnnMaxPoolingLayerImpl.cu  MWCudnnMaxPoolingLayerImpl.hpp  MWCudnnNormLayerImpl.cu  MWCudnnNormLayerImpl.hpp  MWCudnnOutputLayerImpl.cu  MWCudnnOutputLayerImpl.hpp  MWCudnnReLULayerImpl.cu  MWCudnnReLULayerImpl.hpp  MWCudnnSoftmaxLayerImpl.cu  MWCudnnSoftmaxLayerImpl.hpp  MWCudnnTargetNetworkImpl.cu  MWCudnnTargetNetworkImpl.hpp  MWElementwiseAffineLayer.cpp  MWElementwiseAffineLayer.hpp  MWElementwiseAffineLayerImplKernel.cu  MWFCLayer.cpp  MWFCLayer.hpp  MWFusedConvActivationLayer.cpp  MWFusedConvActivationLayer.hpp  MWInputLayer.cpp  (+37 more)
